fix alignement in burger toggle

--- a/assets/components/molecules/nav/nav.scss
+++ b/assets/components/molecules/nav/nav.scss
@@ -483,6 +483,9 @@ $hamburger-btn-size: 2rem;
   }
 
   .nav-toggle .nav-burger {
-    display: block;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
 }
